--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,7 @@ input[type="text"], input[type="date"] {
   border: 1px dashed var(--border);
   color: #334155;
   font-size: smaller;
+  text-align: left;
 }
 
 .error {
@@ -159,6 +160,7 @@ input[type="text"], input[type="date"] {
   border: none;
   color: var(--red-text);
   font-size: smaller;
+  text-align: left;
 }
 
 .actions {
